--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,3 +25,15 @@
 	padding-left: 5px;
 	padding-right: 5px;
 }
+
+.login-signup-container{
+	background-image: url('../images/landing-page-img.jpg');
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	min-height: 100vh;
+	display: flex;
+}
+
+.login-signup{
+	background: #00000082 !important;
+}
