Added about page on profile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -134,3 +134,19 @@
 #profile-info-container{
 	height: 75vh;
 }
+
+#profile-options{
+	margin-top: 70%;
+}
+
+#profile-options span{
+	background: #000000bf;
+	color: #f8f9fa;
+	border: 2px solid none;
+}
+
+#profile-options span:hover{
+	background: none;
+	color: #000000bf;
+	border-color: #000000bf;
+}
