FIX: Fixed a bug where users can't see if they already liked a post or not after reloading the index page.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -172,3 +172,11 @@
 	color: blue;
 	font-weight: bold;
 }
+
+.like-post{
+	color: #fff !important;
+}
+
+.unlike-post{
+	color: #17a2b8 !important;
+}
