--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,6 +34,12 @@
 	padding-right: 5px;
 }
 
+#post-profile-pic{
+	height: 40px;
+	width: 40px;
+	border-radius: 100%;
+}
+
 .login-signup-container{
 	background-image: url('../images/landing-page-img.jpg');
 	background-repeat: no-repeat;
