--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,3 +235,17 @@
 	z-index: -1;
 	position: absolute;
 }
+
+#messages-overlay-container{
+	z-index: 9999;
+	position: fixed;
+}
+
+#messages-overlay{
+	height: 100vh;
+	width: 100vw;
+	display: none;
+	right: 0;
+	top: 0;
+	position: fixed;
+}
