Changed scrollbar background and scrollbar color.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,12 @@
 *::-webkit-scrollbar{
-	width: 5px;
-	background: none;
+	width: 6px;
+	background: #1e2124;
 }
+
+*::-webkit-scrollbar-thumb{
+	background: #2e2f30;
+}
+
 #post-body {
 	resize: none;
 }
@@ -241,17 +246,16 @@
 }
 
 #messages-overlay-container{
-	z-index: 9998;
+	z-index: 9999;
+	background: none;
+	top: 0;
+	right: 0;
 	position: fixed;
 }
 
 #messages-overlay{
 	height: 100vh;
 	width: 100vw;
-	display: none;
-	right: 0;
-	top: 0;
-	position: fixed;
 }
 
 #messenger-search-bar{
