Show details and get conversation data on the right side of messenger for the selected contact

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -316,3 +316,11 @@
 .text-light-gray{
 	color: #adaeb0 !important;
 }
+
+#messenger-right-spinner{
+	height: 100%;
+	width: 100%;
+	z-index: 99999;
+	position: relative;
+	display: flex;
+}
